vlib/v/checker/tests/selector_expr_optional_err.vv
import net.http

fn main() {
    println(http.get('https://httpbin.org/').status_code)
}
